# plexure-api-search

./: .cursorrules  .env.sample  .gitignore  LICENSE  NOTICE  README.md  TODO.md  config.dev.yaml  config.prod.yaml  config.test.yaml  config.yaml  example.yaml  pyproject.toml  setup.py
assets/apis/: .index_cache.json  example.yaml
docs/: api.md  deployment_guide.md  developer_guide.md  troubleshooting_guide.md  user_guide.md
plexure_api_search/: __init__.py  __main__.py  api_spec.py  boosting.py  cache.py  cli.py  config.py  consistency.py  constants.py  embeddings.py  expansion.py  indexer.py  initialize.py  logging.py  metadata.py  metrics.py  monitoring.py  pinecone_client.py  quality.py  searcher.py  understanding.py  utils.py  validation.py
plexure_api_search/analytics/: usage_analytics.py
plexure_api_search/api/: __init__.py
plexure_api_search/bundles/: business_bundles.py
plexure_api_search/cli/: __init__.py
plexure_api_search/cli/commands/: __init__.py  index.py  monitor.py  search.py
plexure_api_search/cli/ui/: hot_reload.py  logging.py  monitor.py
plexure_api_search/config/: __init__.py  base.py  loader.py  validation.py
plexure_api_search/di/: container.py
plexure_api_search/documentation/: business_docs.py
plexure_api_search/embedding/: __init__.py  batch.py  embeddings.py
plexure_api_search/enrichment/: __init__.py  llm_enricher.py  query_enhancer.py
plexure_api_search/indexing/: __init__.py  core.py  indexer.py  model.py  parser.py  processor.py  storage.py  validation.py  vectorizer.py
plexure_api_search/integrations/: __init__.py  faiss_preprocessor.py  pinecone_client.py  pinecone_pool.py  vector_manager.py
plexure_api_search/integrations/llm/: __init__.py  base.py  openrouter_client.py
plexure_api_search/llm/: openrouter_client.py
plexure_api_search/monitoring/: __init__.py  ab_testing.py  alerts.py  analytics.py  anomaly.py  cache_metrics.py  events.py  metrics.py  metrics_manager.py  profiling.py
plexure_api_search/monitoring/events/: __init__.py  event.py  publisher.py  subscriber.py
plexure_api_search/patterns/: business_patterns.py
plexure_api_search/plugins/: base.py
plexure_api_search/recommendations/: business_recommendations.py
plexure_api_search/search/: __init__.py  boosting.py  cache.py  caching.py  clustering.py  consistency.py  context.py  distributed.py  diversity.py  expansion.py  feedback.py  filtering.py  fuzzy.py  hybrid.py  intent.py  optimization.py  personalization.py  quality.py  rag.py  reformulation.py  reranking.py  routing.py  search_models.py  search_result.py  searcher.py  semantic.py  sharding.py  spellcheck.py  storage.py  templates.py  understanding.py  vector_ops.py  vectorizer.py
plexure_api_search/search/strategies/: __init__.py  base.py  cross_encoder.py  hyde.py  multi_vector.py  self_querying.py  sparse_dense.py
plexure_api_search/security/: rate_limiter.py
plexure_api_search/services/: base.py  circuit_breaker.py  discovery.py  events.py  models.py  rate_limiter.py  vector_store.py
plexure_api_search/storage/: __init__.py  faiss_client.py  pinecone_client.py
plexure_api_search/utils/: __init__.py  cache.py  compression.py  distributed_cache.py  file.py  file_utils.py  hierarchical_cache.py  json_utils.py  logger.py
plexure_api_search/workflows/: business_workflows.py
tests/: test_openrouter_client.py
tests/chaos/: test_search_chaos.py
tests/integration/: test_search.py
tests/performance/: test_search_performance.py
tests/security/: test_search_security.py
tests/stress/: test_search_stress.py
