[tool.poetry]
name = "plexure-api-search"
version = "0.1.0"
description = "Advanced API search engine with semantic understanding and business intelligence"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "plexure_api_search" }]

[tool.poetry.dependencies]
python = "^3.9"
sentence-transformers = "^3.3.1"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
prometheus-client = "^0.21.1"
nltk = "^3.8.1"
pydantic = "^2.5.2"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
protobuf = "^5.29.1"
tiktoken = "^0.8.0"
rank-bm25 = "^0.2.2"
watchdog = "^6.0.0"
pyee = "^12.1.1"
pyzmq = "^26.2.0"

[tool.poetry.group.redis]
optional = true

[tool.poetry.group.redis.dependencies]
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.12.0"
mypy = "^1.7.1"
pylint = "^3.0.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
