[tool.poetry]
name = "plexure-api-search"
version = "0.1.0"
description = "Semantic search for API contracts"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
numpy = "^1.26.2"
rich = "^13.7.0"
prometheus-client = "^0.19.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
mypy = "^1.7.1"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plexure-api-search = "plexure_api_search.__main__:main"
